--- a/LibraryPage.html
+++ b/LibraryPage.html
@@ -32,7 +32,7 @@
                 can be found on amazon and through these links:</p>
         </div>
             <div class="Library_List">
-                <img src="AfricanQueen.png" alt="AfricanQueen">
+                <img src="AfricanQueen.png" alt="LibraryPics">
                 <h3>Shiko and the African Queen</h3>
                 <br class="Title_Break">
                 <p class="P_Library">In the first book Shiko meets a lady who 
@@ -42,7 +42,7 @@
             </div>
             <br class="Break_LPBP">
             <div class="Library_List">
-                <img src="WonderDog.png" alt="WonderDog">
+                <img src="WonderDog.png" alt="LibraryPics">
                 <h3>Shiko and the Wonder Dog</h3>
                 <br class="Title_Break">
                 <p class="P_Library">Shiko is helped on a number of occasions by a 
@@ -52,7 +52,7 @@
             </div>
             <br class="Break_LPBP">
             <div class="Library_List">
-                <img src="Holiday.png" alt="Holiday">
+                <img src="Holiday.png" alt="LibraryPics">
                 <h3>Shiko goes on Holiday</h3>
                 <br class="Title_Break">
                 <p class="P_Library">A family holiday in Mombasa provides another 
@@ -62,7 +62,7 @@
             </div>
             <br class="Break_LPBP">
             <div class="Library_List">
-                <img src="RunsAway.png" alt="RunsAway">
+                <img src="RunsAway.png" alt="LibraryPics">
                 <h3>Shiko Runs Away</h3>
                 <br class="Title_Break">
                 <p class="P_Library">Life changes completely for Shiko when her parents 
@@ -72,7 +72,7 @@
             </div>
             <br class="Break_LPBP">
             <div class="Library_List">
-                <img src="Detective.png" alt="Detective">
+                <img src="Detective.png" alt="LibraryPics">
                 <h3>Shiko the Detective</h3>
                 <br class="Title_Break">
                 <p class="P_Library">Shiko listens and observes, skills she uses for 
@@ -82,7 +82,7 @@
             </div>
             <br class="Break_LPBP">            
             <div class="Library_List">
-                <img src="GoesAbroad.png" alt="GoesAbroad">
+                <img src="GoesAbroad.png" alt="LibraryPics">
                 <h3>Shiko and Kofi go Abroad</h3>
                 <br class="Title_Break">
                 <p class="P_Library">Shiko and Kofi and the family come to England 
@@ -92,7 +92,7 @@
             </div>
             <br class="Break_LPBP">            
             <div class="Library_List">
-                <img src="Herbalist.png" alt="Herbalist">
+                <img src="Herbalist.png" alt="LibraryPics">
                 <h3>Shiko and the Herbalist</h3>
                 <br class="Title_Break">
                 <p class="P_Library">Strange shapes in the night and people who seem 
@@ -102,7 +102,7 @@
             </div>
             <br class="Break_LPBP">            
             <div class="Library_List">
-                <img src="MobilePhone.png" alt="MobilePhone">
+                <img src="MobilePhone.png" alt="LibraryPics">
                 <h3>Shiko and the Mobile Phone</h3>
                 <br class="Title_Break">
                 <p class="P_Library">Shiko’s Cousin Kamar and his friend Zinzi are very much involved 
