--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="News_Container">
     <h2>Exciting News</h2>
     <br>
-    <img src="IMG_2011.jpeg" alt="GangPic">
+    <img src="IMG_2011.jpeg" alt="GangPic" width="50%" height="50%">
     <p>Shiko and the Gang</p>
     <p>Soon to be published by Pegasus Elliot Mckenzie</p>
     <p>Provisional Date: 28th November</p>
